--- a/war/WEB-INF/login.html
+++ b/war/WEB-INF/login.html
@@ -8,8 +8,8 @@
 	<form action="/login" method="post">
 		<table>
 			<tr>
-				<td>User name :</td>
-				<td><input type='text' name='username'></td>
+				<td>Email :</td>
+				<td><input type='text' name='email'></td>
 			</tr>
 			<tr>
 				<td>Password :</td>
@@ -19,6 +19,10 @@
 				<td><input type='submit' value='Submit'></td>
 			</tr>
 		</table>
+	</form>
+
+	<form action="/loginwithgoogle" method="get">
+		<input type='submit' value='Google'>
 	</form>
 </body>
 </html>
