--- a/war/WEB-INF/signup.html
+++ b/war/WEB-INF/signup.html
@@ -17,8 +17,12 @@
 	<form action="/signup" method="post">
 		<table>
 			<tr>
-				<td>User name:</td>
-				<td><input type="text" name="username"></td>
+				<td>Name:</td>
+				<td><input type="text" name="name"></td>
+			</tr>
+			<tr>
+				<td>Email Id:</td>
+				<td><input type="text" name="email"></td>
 			</tr>
 			<tr>
 				<td>Password:</td>
