Displaying username in HTML file

--- a/war/WEB-INF/welcome.html
+++ b/war/WEB-INF/welcome.html
@@ -4,11 +4,13 @@
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
 </head>
-<body>
-	welcome here
+<body onload= userInformation()>
+	welcome
+	<span id="name"></span> here
 
 	<form action="/logout">
 		<input type="submit" value="Logout">
 	</form>
 </body>
+<script src="Javascript/userInfo.js"></script>
 </html>
