Displaying Username in the Html page using Ajax

--- a/war/WEB-INF/welcome.html
+++ b/war/WEB-INF/welcome.html
@@ -4,9 +4,9 @@
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
 </head>
-<body onload= userInformation()>
-	welcome
-	<span id="name"></span> here
+<body>
+	Welcome! 
+	<span id="name"></span>
 
 	<form action="/logout">
 		<input type="submit" value="Logout">
