Display all username and email id in the Html page using Ajax

--- a/war/WEB-INF/welcome.html
+++ b/war/WEB-INF/welcome.html
@@ -5,12 +5,41 @@
 <title>Insert title here</title>
 </head>
 <body>
-	Welcome! 
+	Welcome!
 	<span id="name"></span>
 
 	<form action="/logout">
 		<input type="submit" value="Logout">
 	</form>
+	<div id="usertable">
+			Users: <input type="button" value="Add User"> 
+		<div id="rightinfo">
+			Limit: <select name="limit" id="limitid" onchange="allUser(this.value)">
+				<option value="10" selected>10</option>
+				<option value="20">20</option>
+				<option value="30">30</option>
+				<option value="50">50</option>
+			</select>
+		</div>
+		<table>
+			<thead>
+				<tr>
+					<td>User Name</td>
+					<td>Name</td>
+					<td>Option</td>
+				</tr>
+			</thead>
+			<tbody id="userinfotable">
+			</tbody>
+		</table>
+		<div id="rightinfo">
+			<input type="button" value="Back" id="backButton" onClick="previousSetOfUser()">
+			<input type="button" value="Next" id="nextButton" onClick="nextSetOfUser()">
+		</div>
+	</div>
+
 </body>
 <script src="Javascript/userInfo.js"></script>
+<script src="Javascript/userscontact.js"></script>
+<link rel="stylesheet" type="text/css" href="css/script.css">
 </html>
