--- a/war/WEB-INF/welcome.html
+++ b/war/WEB-INF/welcome.html
@@ -12,9 +12,11 @@
 		<input type="submit" value="Logout">
 	</form>
 	<div class="usertable">
-			Users: <input type="button" id="adduserid" onClick="addNewUser()" value="Add User"> 
+		Users: <input type="button" id="adduserid" onClick="addNewUser()"
+			value="Add User">
 		<div id="rightinfo">
-			Limit: <select name="limit" id="limitid" onchange="allUser(this.value)">
+			Limit: <select name="limit" id="limitid"
+				onchange="allUser(this.value)">
 				<option value="10" selected>10</option>
 				<option value="20">20</option>
 				<option value="30">30</option>
@@ -33,29 +35,34 @@
 			</tbody>
 		</table>
 		<div id="rightinfo">
-			<input type="button" value="Back" id="backButton" onClick="previousSetOfUser()">
-			<input type="button" value="Next" id="nextButton" onClick="nextSetOfUser()">
+			<input type="button" value="Back" id="backButton"
+				onClick="previousSetOfUser()"> <input type="button"
+				value="Next" id="nextButton" onClick="nextSetOfUser()">
+		</div>
+		<br>
+		<div id="editUserName">
+			<table>
+				<tr>
+					<td>User name:</td>
+					<td><input type="textbox" name="userName" id="updateUserName"></td>
+				</tr>
+				<tr>
+					<td>EmailId:</td>
+					<td><input type="textbox" name="emailId" id="updateUserEmail"><br></td>
+				<tr>
+					<td colspan="2"><input type="button" value="Save"
+						onClick="updateUserName()"></td>
+				</tr>
+			</table>
 		</div>
 	</div>
 
-<!--div class="usertable" id="editUserName">
-<table>
-<tr>
-<td>User name: </td>
-<td><input type="textbox" name="userName" id="updateUserName"></td>
-</tr>
-<tr>
-<td>EmailId: </td>
-<td><input type="textbox" name="emailId" id="updateUserEmail"><br></td>
-<tr>
-<td colspan="2"><input type="button" value="Save" onClick="alert('working fine')"></td>
-</tr>
-</table>
-</div-->
+
 </body>
 <script src="Javascript/userInfo.js"></script>
 <script src="Javascript/userscontact.js"></script>
 <script src="Javascript/addnewuser.js"></script>
 <script src="Javascript/deleteuser.js"></script>
+<script src="Javascript/updatename.js"></script>
 <link rel="stylesheet" type="text/css" href="css/script.css">
 </html>
